--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,8 +1,13 @@
-<h1> <%= @list.name %> </h1>
-<% @list.bookmarks.each do |bookmark| %>
+<div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @list.photo.key, height: 300, crop: :fill %>')">
+  <h1> <%= @list.name %> </h1>
+
+  <% @list.bookmarks.each do |bookmark| %>
   <p><%= bookmark.movie.title %> - <%= bookmark.comment %></p>
   <p><%= link_to "Delete Movie", bookmark_path(bookmark), method: :delete %></p>
-<% end  %>
+
+  <% end  %>
+
 
 <%= link_to "Add bookmark",  new_list_bookmark_path(@list) %>
 <%= link_to "Back to lists",  lists_path %>
+</div>
